--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-  justify-content: space-between;
   color: #378ad7;
+  background-color: white;
 }
 .footer a {
   font-family: "Rubik";
