--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,20 +4,25 @@ nav {
 }
 
 .nav-lg {
-  height: 60px;
+  display: flex;
 }
 
 .nav-sm {
-  height: 60px;
+  display: none;
+}
+
+button img {
+  width: "8px";
+  height: "8px";
+  align-self: "center";
 }
 
 .search-input {
   height: 40px;
-  width: 500px;
   border-radius: 30px;
   border-width: 0px;
   text-align: right;
   font-family: Rubik;
   color: #0e69ac;
-  padding-right: 50px;
+  background-color: white;
 }
