--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,12 @@
   border-radius: 100%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 0px) {
+  .grid-md {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+  }
   .nav-lg {
     display: none;
   }
@@ -87,18 +92,30 @@
   }
 }
 
-@media only screen and (min-width: 0px) {
-  .grid-md {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
-  }
-}
-
-@media only screen and (min-width: 768px) {
+@media (min-width: 576px) {
   .grid-lg {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
   }
+  .nav-lg {
+    display: flex;
+  }
+
+  .nav-sm {
+    display: none;
+  }
+}
+
+.car-type-img {
+  width: 100%;
+  height: 200px;
+  border-radius: 2rem;
+}
+
+.car-detial-img {
+  width: 100%;
+  height: 100px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
