working on style

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,33 @@
 /* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"); */
+
+:root {
+  --prim-1: #378ad7;
+  --prim-2: #6ebdf7;
+  --prim-3: rgba(215, 232, 247, 0.4);
+
+  --font-base: 16px;
+}
+
+.bg--prim1 {
+  background-color: var(--prim-1);
+}
+.bg--prim2 {
+  background-color: var(--prim-2);
+}
+.bg--prim3 {
+  background-color: var(--prim-3);
+}
+
+.c--prim1 {
+  color: var(--prim-1);
+}
+.c--prim2 {
+  color: var(--prim-2);
+}
+.c--prim3 {
+  color: var(--prim-3);
+}
+
 ::placeholder {
   color: #0e69ac;
   opacity: 1;
@@ -31,6 +60,9 @@ body {
   align-self: flex-end;
 }
 .align-self-center {
+  align-self: center;
+}
+.as-center {
   align-self: center;
 }
 
@@ -104,6 +136,10 @@ body {
 
 .br-100 {
   border-radius: 100%;
+}
+
+.br-small {
+  border-radius: 16px;
 }
 
 @media (min-width: 0px) {
@@ -207,7 +243,7 @@ body {
   font-weight: 700;
 }
 
-.ff-roubick {
+.ff-rubik {
   font-family: "Rubik";
 }
 
@@ -253,7 +289,28 @@ body {
   padding: 32px;
 }
 .m-32f {
+  margin: 32px;
+}
+.mb-32f {
   margin-bottom: 32px;
+}
+
+.p--1 {
+  padding: 2rem;
+}
+
+.p--2 {
+  padding: 1.5rem;
+}
+.p--3 {
+  padding: 1rem;
+}
+.pb--3 {
+  padding-bottom: 1rem;
+}
+
+.p--4 {
+  padding: 0.75rem;
 }
 
 .f-g-1f {
@@ -273,4 +330,37 @@ body {
 }
 .bg-grey {
   background-color: grey;
+}
+
+.fw-bold {
+  font-weight: bold;
+}
+
+.fs--1 {
+  font-size: 2rem;
+}
+.fs--2 {
+  font-size: 1.5rem;
+}
+.fs--3 {
+  font-size: 1.25rem;
+}
+.fs--4 {
+  font-size: 1rem;
+}
+.fs--5 {
+  font-size: 0.75rem;
+}
+.fs--6 {
+  font-size: 0.5rem;
+}
+
+.fb-40 {
+  flex-basis: 40%;
+}
+.fb-50 {
+  flex-basis: 50%;
+}
+.fb-60 {
+  flex-basis: 60%;
 }
