--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,9 @@ body {
   align-items: center;
 }
 
+.ai-center {
+  align-items: center;
+}
 .flex-align-center {
   align-items: center;
 }
@@ -151,6 +154,9 @@ body {
   width: 100%;
 }
 
+.w-80 {
+  width: 80%;
+}
 .h-100 {
   height: 100%;
 }
@@ -162,11 +168,15 @@ body {
 .p-8 {
   padding: 8px;
 }
-
+.p-8px {
+  padding: 8px;
+}
 .br-100 {
   border-radius: 100%;
 }
-
+.br-40px {
+  border-radius: 40px;
+}
 .br-small {
   border-radius: 16px;
 }
@@ -259,6 +269,9 @@ body {
 .fs-20 {
   font-size: 20px;
 }
+.fs-22 {
+  font-size: 22px;
+}
 
 .fs-24 {
   font-size: 24px;
@@ -267,6 +280,12 @@ body {
 .fs-26 {
   font-size: 26px;
 }
+.fs-28px {
+  font-size: 28px;
+}
+.fs-30px {
+  font-size: 30px;
+}
 
 .fw-400 {
   font-weight: 400;
@@ -274,6 +293,9 @@ body {
 
 .fw-500 {
   font-weight: 500;
+}
+.fw-600 {
+  font-weight: 600;
 }
 .fw-700 {
   font-weight: 700;
@@ -310,16 +332,34 @@ body {
 .bc-black {
   background-color: black;
 }
+.bc-grey {
+  background-color: grey;
+}
 .c-black {
   color: black;
 }
 .c-white {
   color: white;
 }
+.c-red {
+  color: red;
+}
 .m-8 {
   margin: 8px;
 }
+.m-8px {
+  margin: 8px;
+}
+.m-0px {
+  margin: 0px;
+}
 
+.ml-8px {
+  margin-left: 8px;
+}
+.mr-8px {
+  margin-right: 8px;
+}
 .br-100 {
   border-radius: 100%;
 }
@@ -409,6 +449,9 @@ body {
 .g-32f {
   gap: 32px;
 }
+.g-40px {
+  gap: 40px;
+}
 .bg-grey {
   background-color: grey;
 }
@@ -468,6 +511,10 @@ body {
   min-width: 70%;
 }
 
+.mw-250px {
+  min-width: 250px;
+}
+
 .ws-nowarp {
   white-space: nowrap;
 }
@@ -488,4 +535,25 @@ body {
 
 .zi-100 {
   z-index: 100;
+}
+
+.b-lg--1 {
+  background: linear-gradient(93.23deg, #ef8539 8.5%, #f7a66c 100%);
+}
+
+.bs--1 {
+  box-shadow: 0px 9px 15px rgba(184, 95, 31, 0.6);
+}
+
+.ta-center {
+  text-align: center;
+}
+
+.fa-circle-arrow-down {
+  border-radius: 100%;
+  color: black;
+}
+
+.cm-filter-option:hover {
+  background-color: black;
 }
