--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,9 @@
 .c-white {
   color: white;
 }
+.c-blue {
+  color: blue;
+}
 
 ::placeholder {
   color: #0e69ac;
@@ -66,6 +69,12 @@ body {
 }
 .d-inline {
   display: inline;
+}
+.d-fixed {
+  display: fixed;
+}
+.d-none {
+  display: none;
 }
 
 .dir-col {
@@ -146,6 +155,9 @@ body {
 .top {
   top: 0;
 }
+.top-0 {
+  top: 0;
+}
 .buttom-0 {
   bottom: 0;
 }
@@ -154,8 +166,35 @@ body {
   width: 100%;
 }
 
+.w-60 {
+  width: 60%;
+}
 .w-80 {
   width: 80%;
+}
+.w-120px {
+  width: 120px;
+}
+.w-80px {
+  width: 80px;
+}
+.w-60px {
+  width: 60px;
+}
+.h-16px {
+  height: 16px;
+}
+.h-20px {
+  height: 20px;
+}
+.h-30px {
+  height: 30px;
+}
+.h-40px {
+  height: 40px;
+}
+.h-50px {
+  height: 50px;
 }
 .h-100 {
   height: 100%;
@@ -171,6 +210,22 @@ body {
 .p-8px {
   padding: 8px;
 }
+.br-15px {
+  border-radius: 15px;
+}
+.br-24px {
+  border-radius: 24px;
+}
+.br-30px {
+  border-radius: 30px;
+}
+.br-30px {
+  border-radius: 30px;
+}
+.br-40px {
+  border-radius: 40px;
+}
+
 .br-100 {
   border-radius: 100%;
 }
@@ -260,13 +315,26 @@ body {
   border-top-right-radius: 15px;
 }
 
+.fs-14px {
+  font-size: 14px;
+}
+
 .fs-16 {
+  font-size: 16px;
+}
+.fs-16px {
   font-size: 16px;
 }
 .fs-18 {
   font-size: 18px;
 }
+.fs-18px {
+  font-size: 18px;
+}
 .fs-20 {
+  font-size: 20px;
+}
+.fs-20px {
   font-size: 20px;
 }
 .fs-22 {
@@ -286,7 +354,12 @@ body {
 .fs-30px {
   font-size: 30px;
 }
-
+.fs-36px {
+  font-size: 36px;
+}
+.fs-56px {
+  font-size: 56px;
+}
 .fw-400 {
   font-weight: 400;
 }
@@ -299,6 +372,9 @@ body {
 }
 .fw-700 {
   font-weight: 700;
+}
+.fw-warp {
+  flex-wrap: warp;
 }
 
 .ff-rubik {
@@ -347,6 +423,9 @@ body {
 .m-8 {
   margin: 8px;
 }
+.m-2px {
+  margin: 2px;
+}
 .m-8px {
   margin: 8px;
 }
@@ -359,6 +438,12 @@ body {
 }
 .mr-8px {
   margin-right: 8px;
+}
+.mr-12px {
+  margin-right: 12px;
+}
+.mb-10 {
+  margin-bottom: 10%;
 }
 .br-100 {
   border-radius: 100%;
@@ -384,7 +469,9 @@ body {
 .d-ib {
   display: inline-block;
 }
-
+.g-2px {
+  gap: 2px;
+}
 .g-8f {
   gap: 8px;
 }
@@ -406,13 +493,33 @@ body {
 .p-32f {
   padding: 32px;
 }
+.pl-8px {
+  padding-left: 8px;
+}
+.pr-8px {
+  padding-right: 8px;
+}
+.pl-12px {
+  padding-left: 12px;
+}
+.pr-12px {
+  padding-right: 12px;
+}
+.pl-20px {
+  padding-left: 20px;
+}
+.pr-20px {
+  padding-right: 20px;
+}
 .m-32f {
   margin: 32px;
 }
 .mb-32f {
   margin-bottom: 32px;
 }
-
+.pb-20px {
+  padding-bottom: 20px;
+}
 .p--1 {
   padding: 2rem;
 }
@@ -500,7 +607,9 @@ body {
 .fb-0px {
   flex-basis: 0px;
 }
-
+.fb-300px {
+  flex-basis: 300px;
+}
 .mw-300px {
   min-width: 300px;
 }
@@ -545,10 +654,19 @@ body {
   box-shadow: 0px 9px 15px rgba(184, 95, 31, 0.6);
 }
 
+.bs--2 {
+  box-shadow: "5px 10px 18px #888888";
+}
 .ta-center {
   text-align: center;
 }
+.ta-right {
+  text-align: right;
+}
 
+.td-none {
+  text-decoration: none;
+}
 .fa-circle-arrow-down {
   border-radius: 100%;
   color: black;
@@ -556,4 +674,12 @@ body {
 
 .cm-filter-option:hover {
   background-color: black;
+}
+
+.bw-1px {
+  border-width: 1px;
+}
+
+.bs-solid {
+  border-style: solid;
 }
